--- a/scss/estilo.css
+++ b/scss/estilo.css
@@ -134,19 +134,11 @@ p.sobreNosotros {
   height: 75%;
 }
 
-.index {
-  display: -webkit-box;
-  display: -ms-flexbox;
+/*.index {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
+  flex-direction: column;
+  align-items: center;
+}*/
 /*Desafio 8 */
 .seccion1 {
   margin-top: 25px;
@@ -255,32 +247,16 @@ h3 {
 }
 
 /*CLASE 12 --Extend*/
-.h1Padre, .h1Hijo1 {
+.h1Padre, .h1Hijo2 {
   color: #3e206d;
-  font-size: 30px;
+  font-size: 50px;
   text-align: center;
   margin-top: 200px;
 }
 
-.h1Hijo1 {
-  color: #916dd5;
-}
-
-.h1Hijo1 {
-  color: #916dd5;
-}
-
-.h1Hijo1 {
-  color: #916dd5;
-}
-
-.h1Hijo1 {
-  color: #916dd5;
-}
-
 h2 {
   color: #3e206d;
-  font-size: 20px;
+  font-size: 35px;
   text-align: center;
 }
 
@@ -338,5 +314,74 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.izquierda {
+  background-color: #FCF1FD;
+  height: 80vh;
+  width: 50%;
+}
+
+h2.h2Izquierda {
+  font-size: 50px;
+  width: 50%;
+  text-align: left;
+  margin-left: 150px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
+
+p.pIzquierda {
+  font-size: 25px;
+  line-height: 30px;
+  text-align: left;
+  margin-left: 80px;
+  width: 50%;
+  margin: auto;
+}
+
+.derecha {
+  background: url(../img/fondoDerecha.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 50%;
+  height: 80vh;
+}
+
+#pantalla-dividida {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.seccion3 {
+  background-color: #FCF1FD;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.productos {
+  background-color: #FCF1FD;
+}
+
+.primeraSeccionProductos {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  padding: 5px;
+  background-image: url(../img/Portada.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.primeraSeccionProductos:before {
+  content: ' ';
+  width: 100%;
+  height: 100%;
+  background: #eee5edcc;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 /*# sourceMappingURL=estilo.css.map */
