--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -111,11 +111,11 @@ p.sobreNosotros {
   height: 75%;
 }
 
-.index {
+/*.index {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+}*/
 
 
 /*Desafio 8 */
@@ -213,36 +213,19 @@ h3 {
 
 .h1Padre {
   color: #3e206d;
-  font-size: 30px;
+  font-size: 50px;
   text-align: center;
   margin-top: 200px;
-
 }
 
-.h1Hijo1 {
-  @extend .h1Padre;
-  color: #916dd5;
-  
+.h1Hijo2 {
+  @extend.h1Padre;
 }
 
-.h1Hijo1 {
-  @extend .h1Padre;
-  color: #916dd5;
-}
-
-.h1Hijo1 {
-  @extend .h1Padre;
-  color: #916dd5;
-}
-
-.h1Hijo1 {
-  @extend .h1Padre;
-  color: #916dd5;
-}
 
 h2 {
   color: #3e206d;
-  font-size: 20px;
+  font-size: 35px;
   text-align: center;
 }
 
@@ -294,4 +277,72 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.izquierda{
+  background-color:#FCF1FD;
+  height: 80vh;
+  width: 50%;
+
+}
+h2.h2Izquierda{
+  font-size: 50px;
+  width: 50%;
+  text-align: left;
+  margin-left: 150px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+
+
+}
+p.pIzquierda{
+  font-size: 25px;
+  line-height: 30px;
+  text-align: left;
+  margin-left: 80px;
+  width: 50%;
+  margin: auto;
+}
+
+.derecha{
+  background: url(../img/fondoDerecha.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 50%;
+  height: 80vh;
+}
+
+#pantalla-dividida{
+  display: flex;
+}
+
+.seccion3{
+  background-color:#FCF1FD;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.productos{
+  background-color:#FCF1FD;
+}
+
+.primeraSeccionProductos{
+  width: 100%;
+  height: 500px;
+  position: relative;
+  padding: 5px;
+  background-image: url(../img/Portada.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+ }
+
+ .primeraSeccionProductos:before{
+  content: ' ';
+  width: 100%;
+  height: 100%;
+  background:#eee5edcc;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
